# Lead_Gen_Engine_For_B2B_SaaS-Agencies-GHL

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  docker-compose.vps.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  discover.py  enrich.py  personalize.py
app/api/: deps.py  routes.py
app/db/: __init__.py  supabase.py
app/engine/: base.py  factory.py  langgraph_workflow.py
app/models/: schemas.py
app/services/: campaign_runner.py  campaigns.py  discover.py  enrich.py  leads_store.py  outreach_hitl.py  outreach_queue.py  personalize.py  stage1.py
app/tools/: __init__.py  audit.py  executor.py  factory.py  icp.py  models.py  perplexity.py  policy.py  registry.py
frontend/: .dockerignore  Dockerfile  next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CreateCampaignModal.tsx  MetricCard.tsx  PageHeader.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/lib/: api.ts  mappers.ts  types.ts
scripts/: remote-deploy.sh  reset_and_migrate.py  run_migrations.py  vps-deploy.sh
supabase/: apply_all.sql  config.toml
supabase/migrations/: 20250619000001_stage1_define.sql  20250619000002_campaign_dashboard.sql  20250620000003_discover_tools.sql  20250620000004_enrich_columns.sql  20250620000005_outreach_drafts.sql  20250620000006_campaign_run.sql  (+7 more)
tests/: test_campaign_runner.py  test_discover_agent.py  test_enrichment_providers.py  test_langgraph_workflow.py  test_smtp_sender.py
(+14 files in other folders)
