[tool.uv]
package = true

[project]
name = "lead-gen-workflow"
version = "0.1.0"
description = "Automated lead gen workflow — meeting on calendar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "langgraph>=1.2.6",
    "perplexityai>=0.38.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
